--- a/index-head.html
+++ b/index-head.html
@@ -24,7 +24,7 @@
                     <img class='header-line1-img4' src="/фото/Heart.png" alt="image">
                 </a>
                 <a href="index-account-vhod.html">
-                    <img class="header-line1-img5" src="/фото/User.png" alt="imagr">
+                    <img class="header-line1-img5" src="/фото/User.png" alt="image">
                 </a>
             </div>
         </form>
@@ -48,7 +48,7 @@
             <img class='header-line3-img2' src="/фото/Vector1.png" alt="image">
             <a class="header-line3-a2" href="index-podderzhka.html">Поддержка</a>
             <img class='header-line3-img3' src="/фото/Info.png" alt="image">
-            <a class="header-line3-a3" href="#">Нужна помощь</a>
+            <a class="header-line3-a3" href="index-help.html">Нужна помощь</a>
             <img class='header-line3-img4' src="/фото/PhoneCall.png" alt="image">
             <a class="header-line3-a4" href="#">Номера нет</a>
         </div>
@@ -131,6 +131,28 @@
                 </p>
             </a>
         </div>
+        <div class="cart">
+            <button class="cart-btn">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+            <button class="cart-btn1">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+            <button class="cart-btn1">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+            <button class="cart-btn1">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+            <button class="cart-btn1">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+        </div>
         <div class="img-line1">
             <img class="img1-line2" src="/фото/image 21.png" alt="">
             <img class="img2-line2" src="/фото/image 22.png" alt="">
@@ -186,6 +208,28 @@
                     Bosch Лазерный уровень/нивелир Зеленый луч
                 </p>
             </a>
+        </div>
+        <div class="cart">
+            <button class="cart-btn">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+            <button class="cart-btn1">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+            <button class="cart-btn1">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+            <button class="cart-btn1">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+            <button class="cart-btn1">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
         </div>
         <div class="cards">
             <div class="first-card">
@@ -272,6 +316,28 @@
                 </p>
             </a>
         </div>
+        <div class="cart">
+            <button class="cart-btn">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+            <button class="cart-btn1">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+            <button class="cart-btn1">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+            <button class="cart-btn1">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+            <button class="cart-btn1">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+        </div>
         <div class="img-line4">
             <img class="img1-line4" src="/фото/image 40.png" alt="">
             <img class="img2-line4" src="/фото/image 41.png" alt="">
@@ -329,13 +395,35 @@
                 </p>
             </a>
         </div>
+        <div class="cart">
+            <button class="cart-btn">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+            <button class="cart-btn1">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+            <button class="cart-btn1">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+            <button class="cart-btn1">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+            <button class="cart-btn1">
+                <img class='cart-img' src="/фото/ShoppingCartSimple.png" alt="">
+                <p class="cart-p">Добавить</p>
+            </button>
+        </div>
         <form action="#" method="get">
             <div class="buttons">
                 <button class="buttons-btn1">
                     <img class='buttons-img1' src="/фото/ArrowLeft.svg" alt="">
                 </button>
-                <button class="buttons-btn2">
-                    <p class="buttons-p1">01</p> 
+                <button class="buttons-btn10">
+                    <p class="buttons-p10">01</p> 
                 </button>
                 <button class="buttons-btn2">
                     <p class="buttons-p1">02</p>
@@ -438,5 +526,6 @@
             </div>
         </div>
     </div>
+    <script src="home.js"></script>
 </body>
 </html>
