--- a/index-head.html
+++ b/index-head.html
@@ -17,7 +17,7 @@
                 <button class='header-line1-btn1' type="submit">
                     <img class="header-line1-img2" src="/фото/search_magnifier_icon_145939.png" alt="Лупа">
                 </button>
-                <a href="#">
+                <a href="index-basket.html">
                     <img class = 'header-line1-img3' src="/фото/ShoppingCartSimple.png" alt="image">
                 </a>
                 <a href="#">
@@ -508,7 +508,7 @@
                 <a href="#">
                     <p class="bottom2-p2">Товары магазина</p>
                 </a>
-                <a href="#">
+                <a href="index-basket.html">
                     <p class="bottom2-p2">Корзина</p>
                 </a>
                 <a href="#">
