--- a/index-head.html
+++ b/index-head.html
@@ -75,8 +75,11 @@
         <div class="tovary">
             <div class="tovar">
                 <a href="#">
-                    <img class="tovar-img" src="/фото/image 11.png" alt="">
+                    <img class="tovar-img" id="tovar-img1" src="/фото/image 11.png" alt="">
                 </a>
+                    <button id="heart-btn1">
+                        <img class="heart-icon" id="heart-icon1" id="heart-icon1" src='/фото/Heart1.svg' alt="">
+                    </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">1 760</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -97,6 +100,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 12.png" alt="">
                 </a>
+                <button id="heart-btn2">
+                    <img class="heart-icon" id="heart-icon2" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">17 999</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -117,6 +123,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 13.png" alt="">
                 </a>
+                <button id="heart-btn3">
+                    <img class="heart-icon" id="heart-icon3" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">11 111</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -137,6 +146,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 14.png" alt="">
                 </a>
+                <button id="heart-btn4">
+                    <img class="heart-icon" id="heart-icon4" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">2 506</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -157,6 +169,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 15.png" alt="">
                 </a>
+                <button id="heart-btn5">
+                    <img class="heart-icon" id="heart-icon5" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">228</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -179,6 +194,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 21.png" alt="">
                 </a>
+                <button id="heart-btn6">
+                    <img class="heart-icon1" id="heart-icon6" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">4 697</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -199,6 +217,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 22.png" alt="">
                 </a>
+                <button id="heart-btn7">
+                    <img class="heart-icon1" id="heart-icon7" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">271</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -219,6 +240,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 23.png" alt="">
                 </a>
+                <button id="heart-btn8">
+                    <img class="heart-icon1" id="heart-icon8" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">10 803</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -239,6 +263,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 24.png" alt="">
                 </a>
+                <button id="heart-btn9">
+                    <img class="heart-icon1" id="heart-icon9" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">95 000</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -259,6 +286,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 25.png" alt="">
                 </a>
+                <button id="heart-btn10">
+                    <img class="heart-icon1" id="heart-icon10" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">20 172</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -306,6 +336,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 31.png" alt="">
                 </a>
+                <button id="heart-btn11">
+                    <img class="heart-icon2" id="heart-icon11" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">15 160</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -326,6 +359,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 32.png" alt="">
                 </a>
+                <button id="heart-btn12">
+                    <img class="heart-icon2" id="heart-icon12" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">11 378</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -346,6 +382,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 33.png" alt="">
                 </a>
+                <button id="heart-btn13">
+                    <img class="heart-icon2" id="heart-icon13" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">12 275</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -366,6 +405,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 34.png" alt="">
                 </a>
+                <button id="heart-btn14">
+                    <img class="heart-icon2" id="heart-icon14" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">1 946</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -386,6 +428,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 35.png" alt="">
                 </a>
+                <button id="heart-btn15">
+                    <img class="heart-icon2" id="heart-icon15" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">480</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -408,6 +453,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/6868039118.png" alt="">
                 </a>
+                <button id="heart-btn16">
+                    <img class="heart-icon3" id="heart-icon16" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">294</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -428,6 +476,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 41.png" alt="">
                 </a>
+                <button id="heart-btn17">
+                    <img class="heart-icon3" id="heart-icon17" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">39 401</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -448,6 +499,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 42.png" alt="">
                 </a>
+                <button id="heart-btn18">
+                    <img class="heart-icon3" id="heart-icon18" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">26 834</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -468,6 +522,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 43.png" alt="">
                 </a>
+                <button id="heart-btn19">
+                    <img class="heart-icon3" id="heart-icon19" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">1 409</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -488,6 +545,9 @@
                 <a href="#">
                     <img class="tovar-img" src="/фото/image 44.png" alt="">
                 </a>
+                <button id="heart-btn20">
+                    <img class="heart-icon3" id="heart-icon20" id="heart-icon1" src="/фото/Heart1.svg" alt="">
+                </button>
                 <div class="tovar-price">
                     <p class="tovar-price-p1">2 350</p>
                     <img class="tovar-price-img1" src="/фото/CurrencyRub.png" alt="">
@@ -507,7 +567,7 @@
         </div>
         <div class="buttons">
             <button class="buttons-btn1">
-                <img class='buttons-img1' src="/фото/ArrowLeft.svg" alt="">
+                <img class='buttons-img1' src="/фото/arrgreenleft.png" alt="">
             </button>
             <button class="buttons-btn10">
                 <p class="buttons-p10">01</p> 
@@ -528,7 +588,7 @@
                 <p class="buttons-p1">06</p>
             </button>
             <button class="buttons-btn3">
-                <img class='buttons-img1' src="/фото/ArrowRight.svg" alt="">
+                <img class='buttons-img2' src="/фото/arrgreenright.png" alt="">
             </button>
         </div>
         <div class="reklama">
@@ -610,6 +670,6 @@
             </div>
         </div>
     </div>
-    <script src="home.js"></script>
+    <script src="head.js"></script>
 </body>
 </html>
