--- a/html/index-account-registration.html
+++ b/html/index-account-registration.html
@@ -6,7 +6,7 @@
     <title>Chipi-Chipi</title>
 </head>
 <body>
-    <link rel="stylesheet" href="style-account-registration.css">
+    <link rel="stylesheet" href="/css/style-account-registration.css">
     <div class="header">
         <div class="header-line2">
             <img class="header-line1-img1" src="/фото/Union.png" alt="Не отобразилось">
@@ -179,6 +179,6 @@
             </a>
         </div>
     </div>
-    <script src="account-registration.js"></script>
+    <script src="/js/account-registration.js"></script>
 </body>
 </html>
