--- a/html/index-favorite.html
+++ b/html/index-favorite.html
@@ -7,7 +7,7 @@
 </favor>
 <body>
     <div>
-    <link rel="stylesheet" href="style-head.css">
+    <link rel="stylesheet" href="/css/style-favorite.css">
     <div class="header">
         </div>
         <form action="" method="get">
