--- a/html/index-filter.html
+++ b/html/index-filter.html
@@ -6,7 +6,7 @@
     <title>Chipi-Chipi</title>
 </head>
 <body>
-    <link rel="stylesheet" href="style-filter.css">
+    <link rel="stylesheet" href="/css/style-filter.css">
     <div class="header">
         <form action="" method="get">
             <div class="header-line2">
