--- a/html/index-head.html
+++ b/html/index-head.html
@@ -6,7 +6,7 @@
     <title>Chipi-Chipi</title>
 </head>
 <body>
-    <link rel="stylesheet" href="style-head.css">
+    <link rel="stylesheet" href="/css/style-head.css">
     <div class="header">
         <div class="header-line2">
             <img class="header-line1-img1" src="/фото/Union.png" alt="Не отобразилось">
@@ -670,6 +670,6 @@
             </div>
         </div>
     </div>
-    <script src="head.js"></script>
+    <script src="/js/head.js"></script>
 </body>
 </html>
