--- a/html/index-help.html
+++ b/html/index-help.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chipi-Chipi</title>
 </head>
-    <link rel="stylesheet" href="style-help.css">
+    <link rel="stylesheet" href="/css/style-help.css">
     <div class="header">
         <form action="" method="get">
             <div class="header-line2">
@@ -242,7 +242,7 @@
             </a>
         </div>
     </div>
-    <script src="help.js"></script>
+    <script src="/js/help.js"></script>
 </body>
 </html>
 
