--- a/html/index-parol.html
+++ b/html/index-parol.html
@@ -6,7 +6,7 @@
     <title>Chipi-Chipi</title>
 </head>
 <body>
-    <link rel="stylesheet" href="style-parol.css">
+    <link rel="stylesheet" href="/css/style-parol.css">
     <div class="header">
         <form action="" method="get">
             <div class="header-line2">
@@ -145,6 +145,6 @@
             </a>
         </div>
     </div>
-    <script src="parol.js"></script>
+    <script src="/js/parol.js"></script>
 </body>
 </html>
