--- a/html/index-podderzhka.html
+++ b/html/index-podderzhka.html
@@ -6,7 +6,7 @@
     <title>Chipi-Chipi</title>
 </head>
 <body>
-    <link rel="stylesheet" href="style-podderzhka.css">
+    <link rel="stylesheet" href="/css/style-podderzhka.css">
     <div class="header">
         <form action="" method="get">
             <div class="header-line2">
@@ -279,6 +279,6 @@
             </a>
         </div>
     </div>
-    <script src="podderzhka.js"></script>
+    <script src="/js/podderzhka.js"></script>
 </body>
 </html>
