--- a/html/index-zakaz.html
+++ b/html/index-zakaz.html
@@ -6,7 +6,7 @@
     <title>Chipi-Chipi</title>
 </head>
 <body>
-    <link rel="stylesheet" href="style-zakaz.css">
+    <link rel="stylesheet" href="/css/style-zakaz.css">
     <div class="header">
         <form action="" method="get">
             <div class="header-line2">
@@ -152,6 +152,6 @@
                 </a>
             </div>
         </div>
-    <script src="zakaz.js"></script>
+    <script src="/js/zakaz.js"></script>
 </body>
 </html>
