--- a/html/index-account-vhod.html
+++ b/html/index-account-vhod.html
@@ -6,7 +6,7 @@
     <title>Chipi-Chipi</title>
 </head>
 <body>
-    <link rel="stylesheet" href="style-account-vhod.css">
+    <link rel="stylesheet" href="/css/style-account-vhod.css">
     <div class="header">
         <div class="header-line2">
             <img class="header-line1-img1" src="/фото/Union.png" alt="Не отобразилось">
@@ -164,6 +164,6 @@
             </a>
         </div>
     </div>
-    <script src="account-vhod.js"></script>
+    <script src="/js/account-vhod.js"></script>
 </body>
 </html>
