--- a/html/index-basket.html
+++ b/html/index-basket.html
@@ -6,7 +6,7 @@
     <title>Chipi-Chipi</title>
 </head>
 <body>
-    <link rel="stylesheet" href="style-basket.css">
+    <link rel="stylesheet" href="/css/style-basket.css">
     <form action="" method="get">
         <div class="header-line2">
             <img class="header-line1-img1" src="/фото/Union.png" alt="Не отобразилось">
@@ -220,6 +220,6 @@
             </a>
         </div>
     </div>
-    <script src="basket.js"></script>
+    <script src="/js/basket.js"></script>
 </body>
 </html>
