--- a/index-tovar.html
+++ b/index-tovar.html
@@ -54,84 +54,56 @@
             <a class="header-line3-a4" href="#">Номера нет</a>
         </div>
     </div>
-    <div class="bottom1-line1">
-    <div>
-        <link rel="stylesheet" href="style-basket.css">
-                <div class="container">
-                    <h2>Корзина</h2>
-                    <table>
-                        <tr>
-                            <th width="190px">Товар</th>
-                            <th width="60px">Цена</th>
-                            <th width="75px">Количество</th>
-                            <th width="70px">Стоимость</th>
-                        </tr>
-                        <tr>
-                            <td>
-                                <div class="bottom1-line1">
-                                    <button1 class="actions button1">
-                                        <img src="del.png" width="24px" height="24px">
-                                    </button1>
-                                    <img src="fav1.png" alt="Product 1" width="72px" height="72px" aria-colcount="#475156">
-                                    <p>Echips Hot Ноутбук 15.6", Intel Core i3-1025G1 (1.2 ГГц), RAM 16 ГБ, SSD 512 ГБ, 
-                                        Intel UHD Graphics, Windows Pro, серый, Русская раскладка</p>
-                                </div>
-                            </td>
-                            <td >28 499 ₽</td>
-                            <td >
-                                <button1 class="actions button1">
-                                <img src="del.png" width="24px" height="24px">
-                                </button1>
-                            </td>
-                            <td >28 499 ₽</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <div class="bottom1-line1">
-                                    <button1 class="actions button1">
-                                        <img src="del.png" width="24px" height="24px">
-                                    </button1>
-                                    <img src="fav2.png" alt="Product 1" width="72px" height="72px" aria-colcount="#475156">
-                                    <p>Philips Погружной блендер HR2657/90, 7 в 1 с овощерезкой-спиралайзером, стаканом, насадкой-венчиком и измельчителем XL, черный</p>
-                                </div>
-                            </td>
-                            <td >6 789 ₽</td>
-                            <td >
-                                <button1 class="actions button1">
-                                <img src="del.png" width="24px" height="24px">
-                                </button1>
-                            </td>
-                            <td >6 789 ₽</td>
-                        </tr>
-        
-                    </table>
-        </div>
-    </div>
-        
-        <!--<div>
-            <div class="container">
-                <h3>Итог</h3>
-                <table>
-                    <tr2>
-                        <td>
-                            <div class="bottom1-line2">
 
-                                <p1>Итоговая сумма</p1>
-                                <p1>35 288 ₽</p1>
-                            </div>
-                        </td>
-                    </tr2>
-                    <tr>
-                        <td>
-                            <div class="bottom1-line2">
-                                <p>Доставка    бесплатно</p>
-                            </div>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-    -->
+
+    <div>
+		<link rel="stylesheet" href="style-tovar.css">
+		<div class="container-img1">
+			<div class="container-img">
+				<img class='header-line3-img8' src="image-mini1.png" alt="image">
+				<img class='header-line3-img8' src="image-mini2.png" alt="image">
+				<img class='header-line3-img8' src="image-mini3.png" alt="image">
+				<img class='header-line3-img8' src="image-mini4.png" alt="image">
+				<a8 href="">ещё</a8>
+			</div>
+			<img class='header-line3-img7' src="image-max.png" alt="image">
+			<div class="container-text9">
+				<p class="a9" style=" font-size: 20px;">Samsung Смартфон Galaxy S23 Ultra 5G 12/256 ГБ, черный</p>
+				<div class="container-text10">
+					<p class="a10">Артикул: A264671</p>
+					<div class="container-imgsmall" >
+						<img class='header-line3-img9' src="image-tydasuda.png" alt="image">
+						<p class="a10">Add to Compare</p>
+					</div>
+				</div>
+				<div class="container-text11">
+					<p class="a10">Состоние: В наличии</p>
+					<div class="container-imgsmall">
+						<img class='header-line3-img10' src="image-love.png" alt="image">
+						<p class="a10">Add to Wishlist</p>
+					</div>
+				</div>
+				<p class="a10">Цвет: черный</p>
+				<img class='header-line3-img11' src="image-color.png" alt="image">
+				<p class="a10" style="color: #191C1F;">Встроенная память:</p>
+				<div class="container-text11">
+					<button10 style="font-size: 14px; line-height: 48px;">
+						<p10>256 ГБ</p10>
+					</button10>
+					<button10 style="font-size: 14px; line-height: 48px;">
+						<p10>512 ГБ</p10>
+					</button10>
+					<button10 style="font-size: 14px; line-height: 48px;">
+						<p10>1024 ГБ</p10>
+					</button10>
+				</div>
+				<p class="a11">Все характеристики:</p>
+			</div>
+		</div>
+		
+	</div>
+
+
     <div class="bottom">
         <div class="bottom1">
             <div class="bottom1-line1">
