--- a/index-account.html
+++ b/index-account.html
@@ -6,7 +6,7 @@
     <title>Chipi-Chipi</title>
 </head>
 <body>
-    <link rel="stylesheet" href="style-account.css">
+    <link rel="stylesheet" href="/css/style-account.css">
     <div class="header">
         <div class="header-line2">
             <img class="header-line1-img1" src="/фото/Union.png" alt="Не отобразилось">
@@ -112,10 +112,7 @@
                     </div>
                     <div class="settings-left-1">
                         <p class="settings-left-1-p">Страна</p>
-                        <select class="settings-left-1-input" name="land" >
-                            <option value="1">Россия</option>
-                            <option value="2">Китай</option>
-                        </select>
+                        <input class="settings-left-1-input" type="text" placeholder="Москва">
                     </div>
                     <div class="settings-left-1-btn">
                         <button class="settings-left-1-button">
@@ -139,13 +136,7 @@
                     <div class="settings-right-2">
                         <div class="settings-right-21">
                             <p class="settings-right-21-p">Регион</p>
-                            <select class="settings-right-21-input">
-                                <option value="1">Московская обл.</option>
-                                <option value="1">Волгоградская обл.</option>
-                                <option value="1">Ивановская обл.</option>
-                                <option value="1">Кемеровская обл.</option>
-                                <option value="1">Костромская обл.</option>
-                            </select>
+                            <input class="settings-right-21-input" type="text" placeholder="Московская обл.">
                         </div>
                         <div class="settings-right-22">
                             <p class="settings-right-22-p">Индекс</p>
@@ -181,31 +172,16 @@
             </div>
             <div class="adress-12">
                 <p class="adress-12-p1">Страна</p>
-                <select class="adress-121-input" name="land">
-                    <option value="1">Россия</option>
-                    <option value="2">Китай</option>
-                </select>
+                <input class="adress-12-input" type="text" placeholder="Россия">
             </div>
             <div class="adress-12">
                 <p class="adress-12-p1">Регион</p>
-                <select class="adress-121-input" name="region">
-                    <option value="1">Московская обл.</option>
-                    <option value="1">Волгоградская обл.</option>
-                    <option value="1">Ивановская обл.</option>
-                    <option value="1">Кемеровская обл.</option>
-                    <option value="1">Костромская обл.</option>
-                </select>
+                <input class="adress-12-input" type="text" placeholder="Московская область">
             </div>
             <div class="adress-11">
                 <div class="adress-111">
                     <p class="adress-111-p">Город</p>
-                    <select class="adress-111-input" name="city">
-                        <option value="1">Москва</option>
-                        <option value="1">Волжский</option>
-                        <option value="1">Иваново</option>
-                        <option value="1">Санкт-Петербург</option>
-                        <option value="1">Кострома</option>
-                    </select>
+                    <input class="adress-111-input" type="text" placeholder="Москва">
                 </div>
                 <div class="adress-112">
                     <p class="adress-112-p">Индекс</p>
@@ -218,7 +194,7 @@
             </div>
             <div class="adress-12">
                 <p class="adress-12-p1">Номер телефона</p>
-                <input class="adress-12-input" type="text" placeholder="телефона нет">
+                <input class="adress-12-input" type="text" placeholder="Телефона нет">
             </div>
             <div class="adress-btn">
                 <button class="adress-button">
@@ -331,6 +307,6 @@
             </a>
         </div>
     </div>
-    <script src="account.js"></script>
+    <script src="/js/account.js"></script>
 </body>
 </html>
