--- a/html/index-favorite.html
+++ b/html/index-favorite.html
@@ -9,26 +9,23 @@
     <div>
     <link rel="stylesheet" href="/css/style-favorite.css">
     <div class="header">
+        <div class="header-line2">
+            <img class="header-line1-img1" src="/фото/Union.png" alt="Не отобразилось">
+            <a  href="index-head.html" class="header-line1-p1">Chipi-Chipi</a>
+            <input class='header-line1-input' type="text" placeholder="Поиск по сайту..." name="header-line1-poisk">
+            <button class='header-line1-btn1' type="submit">
+                <img class="header-line1-img2" src="/фото/search_magnifier_icon_145939.png" alt="Лупа">
+            </button>
+            <a href="index-basket.html">
+                <img class = 'header-line1-img3' src="/фото/ShoppingCartSimple.png" alt="image">
+            </a>
+            <a href="#">
+                <img class='header-line1-img4' src="/фото/Heart.png" alt="image">
+            </a>
+            <a href="index-account-vhod.html">
+                <img class="header-line1-img4" src="/фото/User.png" alt="imagr">
+            </a>
         </div>
-        <form action="" method="get">
-            <div class="header-line2">
-                <img class="header-line1-img1" src="Union.png" alt="Не отобразилось">
-                <a  href="index-head.html" class="header-line1-p1">Chipi-Chipi</a>
-                <input class='header-line1-input' type="text" placeholder="Поиск по сайту..." name="header-line1-poisk">
-                <button class='header-line1-btn1' type="submit">
-                    <img class="header-line1-img2" src="search_magnifier_icon_145939.png" alt="Лупа">
-                </button>
-                <a href="index-basket.html">
-                    <img class = 'header-line1-img3' src="ShoppingCartSimple.png" alt="image">
-                </a>
-                <a href="#">
-                    <img class='header-line1-img4' src="Heart.png" alt="image">
-                </a>
-                <a href="index-account-vhod.html">
-                    <img class="header-line1-img5" src="User.png" alt="imagr">
-                </a>
-            </div>
-        </form>
         <div class="header-line3">
             <select class='header-line3-select' name="category">
                 <option class="header-line3-option" value="1">Все категории</option>
@@ -44,13 +41,13 @@
                 <option class="header-line3-option" value="11">Красота и здоровье</option>
                 <option class="header-line3-option" value="12">Продукты</option>
             </select>
-            <img class='header-line3-img1' src="MapPinLine.png" alt="image">
+            <img class='header-line3-img1' src="/фото/MapPinLine.png" alt="image">
             <a class="header-line3-a1" href="index-zakaz.html">Отследить заказ</a>
-            <img class='header-line3-img2' src="Vector1.png" alt="image">
-            <a class="header-line3-a2" href="index-podderzhka.html">Поддержка</a>
-            <img class='header-line3-img3' src="Info.png" alt="image">
-            <a class="header-line3-a3" href="#">Нужна помощь</a>
-            <img class='header-line3-img4' src="PhoneCall.png" alt="image">
+            <img class='header-line3-img2' src="/фото/Vector1.png" alt="image">
+            <a class="header-line3-a1" href="index-podderzhka.html">Поддержка</a>
+            <img class='header-line3-img3' src="/фото/Info.png" alt="image">
+            <a class="header-line3-a1" href="index-help.html">Нужна помощь</a>
+            <img class='header-line3-img4' src="/фото/PhoneCall.png" alt="image">
             <a class="header-line3-a4" href="#">Номера нет</a>
         </div>
     </div>
