--- a/html/index-parol.html
+++ b/html/index-parol.html
@@ -8,25 +8,23 @@
 <body>
     <link rel="stylesheet" href="/css/style-parol.css">
     <div class="header">
-        <form action="" method="get">
-            <div class="header-line2">
-                <img class="header-line1-img1" src="/фото/Union.png" alt="Не отобразилось">
-                <a  href="index-head.html" class="header-line1-p1">Chipi-Chipi</a>
-                <input class='header-line1-input' type="text" placeholder="Поиск по сайту..." name="header-line1-poisk">
-                <button class='header-line1-btn1' type="submit">
-                    <img class="header-line1-img2" src="/фото/search_magnifier_icon_145939.png" alt="Лупа">
-                </button>
-                <a href="index-basket.html">
-                    <img class = 'header-line1-img3' src="/фото/ShoppingCartSimple.png" alt="image">
-                </a>
-                <a href="#">
-                    <img class='header-line1-img4' src="/фото/Heart.png" alt="image">
-                </a>
-                <a href="index-account-vhod.html">
-                    <img class="header-line1-img5" src="/фото/User.png" alt="image">
-                </a>
-            </div>
-        </form>
+        <div class="header-line2">
+            <img class="header-line1-img1" src="/фото/Union.png" alt="Не отобразилось">
+            <a  href="index-head.html" class="header-line1-p1">Chipi-Chipi</a>
+            <input class='header-line1-input' type="text" placeholder="Поиск по сайту..." name="header-line1-poisk">
+            <button class='header-line1-btn1' type="submit">
+                <img class="header-line1-img2" src="/фото/search_magnifier_icon_145939.png" alt="Лупа">
+            </button>
+            <a href="index-basket.html">
+                <img class = 'header-line1-img3' src="/фото/ShoppingCartSimple.png" alt="image">
+            </a>
+            <a href="#">
+                <img class='header-line1-img4' src="/фото/Heart.png" alt="image">
+            </a>
+            <a href="index-account-vhod.html">
+                <img class="header-line1-img4" src="/фото/User.png" alt="imagr">
+            </a>
+        </div>
         <div class="header-line3">
             <select class='header-line3-select' name="category">
                 <option class="header-line3-option" value="1">Все категории</option>
@@ -45,41 +43,39 @@
             <img class='header-line3-img1' src="/фото/MapPinLine.png" alt="image">
             <a class="header-line3-a1" href="index-zakaz.html">Отследить заказ</a>
             <img class='header-line3-img2' src="/фото/Vector1.png" alt="image">
-            <a class="header-line3-a2" href="index-podderzhka.html">Поддержка</a>
+            <a class="header-line3-a1" href="index-podderzhka.html">Поддержка</a>
             <img class='header-line3-img3' src="/фото/Info.png" alt="image">
-            <a class="header-line3-a3" href="index-help.html">Нужна помощь</a>
+            <a class="header-line3-a1" href="index-help.html">Нужна помощь</a>
             <img class='header-line3-img4' src="/фото/PhoneCall.png" alt="image">
             <a class="header-line3-a4" href="#">Номера нет</a>
         </div>
     </div>
-    <form action="#" method="get">
-        <div class="account">
-            <p class="account-p1">Восстановить пароль</p>
-            <p class="account-p2">Введите адрес электронной почты или номер</p>
-            <p class="account-p3">мобильного телефона, связанный с вашей учетной</p>
-            <p class="account-p4">записью.</p>
-            <div class="account-p11">
-                <p class="account-p12">Email адрес</p>
-                <input class="account-p-input" type="email">
-            </div>
-            <div class="account-btn">
-                <button class="account-button">
-                    <p class="account-button-p">ОТПРАВИТЬ КОД</p>
-                    <img src="/фото/ArrowRight.png" alt="">
-                </button>
-            </div>
-            <div class="have-acc">
-                <p class="have-acc-p1">Уже есть аккаунт? <a class='have-acc-a' href="index-account-vhod.html">Войти</a></p>
-                <p class="have-acc-p2">Нет аккаунта? <a class='have-acc-a' href="index-account-registration.html">Зарегистрироваться</a></p>
-            </div>
-            <div class="line">
-                <div class="line1"></div>
-            </div>
-            <div class="support">
-                <p class="support-p">Вы можете обратиться в <a class="support-a" href="index-podderzhka.html">службу поддержки клиентов</a> за помощью в восстановлении доступа к вашей учетной записи.</p>
-            </div>
+    <div class="account">
+        <p class="account-p1">Восстановить пароль</p>
+        <p class="account-p2">Введите адрес электронной почты или номер</p>
+        <p class="account-p3">мобильного телефона, связанный с вашей учетной</p>
+        <p class="account-p4">записью.</p>
+        <div class="account-p11">
+            <p class="account-p12">Email адрес</p>
+            <input class="account-p-input" type="email">
         </div>
-    </form>
+        <div class="account-btn">
+            <button class="account-button">
+                <p class="account-button-p">ОТПРАВИТЬ КОД</p>
+                <img src="/фото/ArrowRight.png" alt="">
+            </button>
+        </div>
+        <div class="have-acc">
+            <p class="have-acc-p1">Уже есть аккаунт? <a class='have-acc-a' href="index-account-vhod.html">Войти</a></p>
+            <p class="have-acc-p2">Нет аккаунта? <a class='have-acc-a' href="index-account-registration.html">Зарегистрироваться</a></p>
+        </div>
+        <div class="line">
+            <div class="line1"></div>
+        </div>
+        <div class="support">
+            <p class="support-p">Вы можете обратиться в <a class="support-a" href="index-podderzhka.html">службу поддержки клиентов</a> за помощью в восстановлении доступа к вашей учетной записи.</p>
+        </div>
+    </div>
     <div class="bottom">
         <div class="bottom1">
             <div class="bottom1-line1">
