--- a/html/index-basket.html
+++ b/html/index-basket.html
@@ -66,8 +66,10 @@
                     </button>
                     <img class="tovar-img2" src="/фото/Image10.svg" alt="">
                     <p class="tovar1-p1">4K UHD LED Smart TV c домашней аудисистемой</p>
-                    <p class="tovar1-p2">&&&</p>
-                    <img class="tovar-img3" src="/фото/icons8-рубль-32.png" alt="">
+                    <div class="price">
+                        <p class="tovar1-p2">&&&</p>
+                        <img class="tovar-img3" src="/фото/icons8-рубль-32.png" alt="">
+                    </div>
                     <div class="kolvo">
                         <button class="kolvo-btn1">
                             <img class="kolvo-img1" src="/фото/Minus1.svg" alt="">
@@ -77,17 +79,21 @@
                             <img class="kolvo-img2" src="/фото/Plus.svg" alt="">
                         </button>
                     </div>
-                    <p class="tovar1-p3">&&&</p>
-                    <img class="tovar-img4" src="/фото/icons8-рубль-32.png" alt="">
+                    <div class="price">
+                        <p class="tovar1-p2">&&&</p>
+                        <img class="tovar-img3" src="/фото/icons8-рубль-32.png" alt="">
+                    </div>
                 </div>
-                <div class="tovar2">
-                    <button class="tovar2-btn-img1">
+                <div class="tovar1">
+                    <button class="tovar1-btn-img1">
                         <img class="tovar-img1" src="/фото/XCircle.svg" alt="">
                     </button>
                     <img class="tovar-img2" src="/фото/Image2.svg" alt="">
                     <p class="tovar1-p1">Беспроводные наушники с микрофоном Sony WH-1000XM4 Black</p>
-                    <p class="tovar1-p2">&&&</p>
-                    <img class="tovar-img3" src="/фото/icons8-рубль-32.png" alt="">
+                    <div class="price">
+                        <p class="tovar1-p2">&&&</p>
+                        <img class="tovar-img3" src="/фото/icons8-рубль-32.png" alt="">
+                    </div>
                     <div class="kolvo">
                         <button class="kolvo-btn1">
                             <img class="kolvo-img1" src="/фото/Minus1.svg" alt="">
@@ -97,8 +103,10 @@
                             <img class="kolvo-img2" src="/фото/Plus.svg" alt="">
                         </button>
                     </div>
-                    <p class="tovar1-p3">&&&</p>
-                    <img class="tovar-img4" src="/фото/icons8-рубль-32.png" alt="">
+                    <div class="price">
+                        <p class="tovar1-p2">&&&</p>
+                        <img class="tovar-img3" src="/фото/icons8-рубль-32.png" alt="">
+                    </div>
                 </div>
             </div>
             <div class="knopki">
@@ -118,18 +126,22 @@
                 </div>
                 <div class="cart-right-12">
                     <p class="cart-right-12-p1">Итоговая цена</p>
-                    <p class="cart-right-12-p2">&&&</p>
-                    <img class="cart-right-12-img" src="/фото/icons8-рубль-32.png" alt="">
+                    <div class="cart-right-12-p2-img">
+                        <p class="cart-right-12-p2">&&&</p>
+                        <img class="cart-right-12-img" src="/фото/icons8-рубль-32.png" alt="">
+                    </div>
                 </div>
                 <div class="cart-right-12">
-                    <p class="cart-right-12-p3">Доставка</p>
-                    <p class="cart-right-12-p4">Бесплатно</p>
+                    <p class="cart-right-12-p1">Доставка</p>
+                    <p class="cart-right-12-p3">Бесплатно</p>
                 </div>
                 <p class="poloska"></p>
                 <div class="cart-right-12">
-                    <p class="cart-right-12-p5">Итого</p>
-                    <p class="cart-right-12-p6">&&&</p>
-                    <img class="cart-right-12-img" src="/фото/icons8-рубль-32.png" alt="">
+                    <p class="cart-right-12-p4">Итого</p>
+                    <div class="cart-right-12-p2-img">
+                        <p class="cart-right-12-p2">&&&</p>
+                        <img class="cart-right-12-img" src="/фото/icons8-рубль-32.png" alt="">
+                    </div>
                 </div>
                 <div class="cart-right-12-btn">
                     <button class="cart-right-12-btn1">
