--- a/html/index-basket.html
+++ b/html/index-basket.html
@@ -67,7 +67,7 @@
                     <img class="tovar-img2" src="/фото/Image10.svg" alt="">
                     <p class="tovar1-p1">4K UHD LED Smart TV c домашней аудисистемой</p>
                     <div class="price">
-                        <p class="tovar1-p2">&&&</p>
+                        <p class="tovar1-p2">&&&00000000</p>
                         <img class="tovar-img3" src="/фото/icons8-рубль-32.png" alt="">
                     </div>
                     <div class="kolvo">
@@ -156,6 +156,9 @@
                 </div>
                 <div class="cart-right-22">
                     <input class="cart-right-22-input" type="text" placeholder="Введите промокод...">
+                </div>
+                <div class="promokod">
+                    <p class="promokod-p">Промокод не найден</p>
                 </div>
                 <div class="cart-right-22-btn">
                     <button class="cart-right-22-btn1">
