--- a/html/index-account.html
+++ b/html/index-account.html
@@ -24,6 +24,9 @@
             <a href="index-account-vhod.html">
                 <img class="header-line1-img4" src="/фото/User.png" alt="imagr">
             </a>
+            <!-- <a href="index-account-vhod.html">
+                <img class="header-line1-img4" src="/фото1/icons8-войти-28.png" alt="imagr">
+            </a> -->
         </div>
         <div class="header-line3">
             <select class='header-line3-select' name="category">
