--- a/html/index-head.html
+++ b/html/index-head.html
@@ -26,20 +26,25 @@
             </a>
         </div>
         <div class="header-line3">
-            <select class='header-line3-select' name="category">
-                <option class="header-line3-option" value="1">Все категории</option>
-                <option class="header-line3-option" value="2">Электроника</option>
-                <option class="header-line3-option" value="3">Одежда</option>
-                <option class="header-line3-option" value="4">Бытовая техника</option>
-                <option class="header-line3-option" value="5">Дом и сад</option>
-                <option class="header-line3-option" value="6">Аптека</option>
-                <option class="header-line3-option" value="7">Товары для животных</option>
-                <option class="header-line3-option" value="8">Аксессуары</option>
-                <option class="header-line3-option" value="9">Автотовары</option>
-                <option class="header-line3-option" value="10">Мебель</option>
-                <option class="header-line3-option" value="11">Красота и здоровье</option>
-                <option class="header-line3-option" value="12">Продукты</option>
-            </select>
+            <div class="filter">
+                <button class="header-line3-new">
+                    <p class="header-line3-p">Все категории</p>
+                    <img class="header-line3-new-img" src="/фото1/Vector.png" alt="">
+                </button>
+                <div class="category">
+                    <p class="category-p">Электроника</p>
+                    <p class="category-p">Одежда</p>
+                    <p class="category-p">Бытовая техника</p>
+                    <p class="category-p">Дом и сад</p>
+                    <p class="category-p">Аптека</p>
+                    <p class="category-p">Товары для животных</p>
+                    <p class="category-p">Аксессуары</p>
+                    <p class="category-p">Автотовары</p>
+                    <p class="category-p">Мебель</p>
+                    <p class="category-p">Красота и здоровье</p>
+                    <p class="category-p">Продукты</p>
+                </div>
+            </div>
             <img class='header-line3-img1' src="/фото/MapPinLine.png" alt="image">
             <a class="header-line3-a1" href="index-zakaz.html">Отследить заказ</a>
             <img class='header-line3-img2' src="/фото/Vector1.png" alt="image">
@@ -95,6 +100,11 @@
                     <img class="cart-img" src="/фото/ShoppingCartSimple.png" alt="">
                     <p class="cart-p">Добавить</p>
                 </button>
+            </div>
+            <div class="quantity-block">
+                <button class="minus-btn"><img class="kolvo-img1" src="/фото1/icons8-минус-24.png" alt=""></button>
+                <p class="quantity">1</p>
+                <button class="plus-btn"><img class="kolvo-img2" src="/фото1/icons8-плюс-24.png" alt=""></button>
             </div>
         </div>
         <div class="tovar">
